--- a/calculator.html
+++ b/calculator.html
@@ -7,8 +7,8 @@
 				// 더하기 버튼 눌렀을 때 호출되는 함수
 				document.getElementById("add").onclick = function() {
 				  var num1 = parseInt(document.getElementById("num1").value);
-				  var num2 = parseInt(document.getElementById("num2").value);
-				  alert(num1 + num2);		
+  				  var num2 = parseInt(document.getElementById("num2").value);
+  				  alert(Math.max(num1, num2));		
 				};
 
 				// 빼기 버튼 눌렀을 때 호출되는 함수
@@ -41,7 +41,12 @@
 
 				// 최대값 버튼 눌렀을 때 호출되는 함수
 				document.getElementById("max").onclick = function() {
-
+				  var num1 = parseInt(document.getElementById("num1").value);
+				  var num2 = parseInt(document.getElementById("num2").value);
+				  if(num1 < num2)
+				    alert(num2);
+				  else
+				    alert(num1);
 				};
 			}
 		</script>
